Fixed a gap between the header and the nav for mobile

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -12,7 +12,6 @@ header {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 5%
 }
 
 .name {
